@@ -1,38 +1,26 @@
 package org.synyx.urlaubsverwaltung.overview;
 
-import org.junit.Assert;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.synyx.urlaubsverwaltung.TestDataCreator;
 import org.synyx.urlaubsverwaltung.period.DayLength;
 import org.synyx.urlaubsverwaltung.person.Person;
 import org.synyx.urlaubsverwaltung.sickdays.web.SickDays;
-import org.synyx.urlaubsverwaltung.sicknote.SickNote;
-import org.synyx.urlaubsverwaltung.sicknote.SickNoteCategory;
-import org.synyx.urlaubsverwaltung.sicknote.SickNoteStatus;
-import org.synyx.urlaubsverwaltung.sicknote.SickNoteType;
+import org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNote;
+import org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNoteCategory;
+import org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNoteStatus;
+import org.synyx.urlaubsverwaltung.sicknote.sicknotetype.SickNoteType;
 import org.synyx.urlaubsverwaltung.workingtime.WorkDaysCountService;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-
 class SickDaysOverviewTest {
-
-    private WorkDaysCountService workDaysCountService;
-
-    @BeforeEach
-    void setUp() {
-
-        workDaysCountService = mock(WorkDaysCountService.class);
-    }
-
 
     @Test
     void ensureGeneratesCorrectSickDaysOverview() {
@@ -85,28 +73,29 @@ class SickDaysOverviewTest {
         inactiveChildSickNote.setStartDate(LocalDate.of(2014, 10, 18));
         inactiveChildSickNote.setEndDate(LocalDate.of(2014, 10, 18));
 
-        List<SickNote> sickNotes = Arrays.asList(sickNoteWithoutAUB, sickNoteWithAUB, childSickNoteWithoutAUB,
+        final List<SickNote> sickNotes = List.of(sickNoteWithoutAUB, sickNoteWithAUB, childSickNoteWithoutAUB,
             childSickNoteWithAUB, inactiveSickNote, inactiveChildSickNote);
+
+        final WorkDaysCountService workDaysCountService = mock(WorkDaysCountService.class);
 
         // just return 1 day for each sick note
         when(workDaysCountService.getWorkDaysCount(any(DayLength.class), any(LocalDate.class),
             any(LocalDate.class), any(Person.class)))
             .thenReturn(BigDecimal.ONE);
 
-        SickDaysOverview sickDaysOverview = new SickDaysOverview(sickNotes, workDaysCountService);
+        final SickDaysOverview sickDaysOverview = new SickDaysOverview(sickNotes, workDaysCountService);
 
-        SickDays sickDays = sickDaysOverview.getSickDays();
-        Assert.assertNotNull("Should not be null", sickDays.getDays());
-        Assert.assertEquals("Wrong number of sick days without AUB", new BigDecimal("2"),
-            sickDays.getDays().get("TOTAL"));
-        Assert.assertEquals("Wrong number of sick days with AUB", BigDecimal.ONE, sickDays.getDays().get("WITH_AUB"));
+        final SickDays sickDays = sickDaysOverview.getSickDays();
+        assertThat(sickDays.getDays())
+            .isNotNull()
+            .containsEntry("TOTAL", new BigDecimal("2"))
+            .containsEntry("WITH_AUB", BigDecimal.ONE);
 
-        SickDays childSickDays = sickDaysOverview.getChildSickDays();
-        Assert.assertNotNull("Should not be null", childSickDays.getDays());
-        Assert.assertEquals("Wrong number of child sick days without AUB", new BigDecimal("2"),
-            childSickDays.getDays().get("TOTAL"));
-        Assert.assertEquals("Wrong number of child sick days with AUB", BigDecimal.ONE,
-            childSickDays.getDays().get("WITH_AUB"));
+        final SickDays childSickDays = sickDaysOverview.getChildSickDays();
+        assertThat(childSickDays.getDays())
+            .isNotNull()
+            .containsEntry("TOTAL", new BigDecimal("2"))
+            .containsEntry("WITH_AUB", BigDecimal.ONE);
     }
 
 }
